--- a/Login Page/Index.html
+++ b/Login Page/Index.html
@@ -7,21 +7,17 @@
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    <div style="display: flex;justify-content: center;">
-        <div>
-            <div>
-                <form action="method1">
-                    <img src="assets/logo.png" alt="img" style="border-radius: 50%; margin-left: 70px;width: 50px;height: 50px; margin-top: 20px;"><br>
-                    <label for="email">Email</label><br>
-                    <input type="email" placeholder="xyz@gmail.com" required><br>
-                    <label for="pass">Password</label><br>
-                    <input type="password" placeholder="*******"  required><br>
-                    <button>Login</button>
-                </form>
-            </div>
+    <div style="display: flex;justify-content: center;margin-top: 80px;">
+        <div class="div1">
+            <form action="method1">
+                <img src="assets/logo.png" alt="img" style="border-radius: 50%; margin-left: 70px;width: 50px;height: 50px; margin-top: 20px;"><br>
+                <label for="email">Email</label><br>
+                <input type="email" placeholder="xyz@gmail.com" required><br>
+                <label for="pass">Password</label><br>
+                <input type="password" placeholder="*******" required><br>
+                <button>Login</button>
+            </form>
         </div>
     </div>
- 
-   
 </body>
 </html>
